getRandomWords - openapi and description
